navbar collapse icon fix
- navbar collapsed menu icon wasnt appearing, due to a bootstrap issue.

--- a/css/skins/main_color.css
+++ b/css/skins/main_color.css
@@ -1,5 +1,6 @@
 .footer,
 .mybtn2,
+.navbar-toggler,
 .newsletter-section::before,
 .testimonial-section .owl-carousel .owl-nav button.owl-next:hover, 
 .testimonial-section .owl-carousel .owl-nav button.owl-prev:hover,
