--- a/css/style.css
+++ b/css/style.css
@@ -329,13 +329,12 @@ color: #00a24e;
 
  }
  .header .navbar{
- 	padding:0;
+	color: #00a24e !important;
  }
  .header .navbar.navbar-light .navbar-brand{
  	font-size: 30px;
  	font-weight: 700;
  	text-transform: uppercase;
- 	color:#ffffff;
  } 
 
 .navbar-brand img {
@@ -343,6 +342,12 @@ color: #00a24e;
 	width: 50%;
 	padding: 0;
 	margin: 0;
+}
+
+.header .navbar button {
+	color: #00a24e !important;
+	text-align: center;
+	margin: 0 auto;
 }
 
  .header .navbar #collapsibleNavbar .nav-item .nav-link{
@@ -358,7 +363,6 @@ color: #00a24e;
  .header .navbar #collapsibleNavbar .nav-item .nav-link:hover{
 	opacity:1;
  }
-
 
 .header .navbar #collapsibleNavbar .nav-item .nav-link.active{
 	opacity:1;
@@ -387,13 +391,12 @@ color: #00a24e;
 	left:0;
 	right:0;
 	bottom:-1px;
-	height: 112px;
+	height: 150px;
 	background-image: url("../img/shape-bg.png");
 	background-size: cover;
 	background-position: bottom;
 	z-index: -1;
 }
-
 .home-section .home-content h1{
    font-size: 55px;
    color:#ffffff;
@@ -409,17 +412,16 @@ color: #00a24e;
 	line-height: 28px;
 	font-weight: 400;
 }
-
 .home-section .home-img img{
 	max-width: 400px;
 	width: 100%;
 	position: absolute;
 	left: 150px;
     top:-50px;
-    animation: productani01 5s linear infinite;
+    animation: bounce 5s linear infinite;
 }
 
-@keyframes productani01{
+@keyframes bounce{
 	0%,100%{
 		transform: translateY(15px);
 	}
